getArticleCountを実装
