# pkg/auth/auth_requests.go
@@ -10,6 +10,7 @@ var AuthRequests = []AuthRequest{
 	{Mehtod: "PUT", URL: regexp.MustCompile(`/v1/articles$`), Auth: true},
 	{Mehtod: "GET", URL: regexp.MustCompile(`/v1/articles/[0-9]*$`), Auth: false},
 	{Mehtod: "DELETE", URL: regexp.MustCompile(`/v1/articles/[0-9]*$`), Auth: true},
+	{Mehtod: "GET", URL: regexp.MustCompile(`/v1/articles/counts$`), Auth: false},
 
 	{Mehtod: "GET", URL: regexp.MustCompile(`/v1/oauth/google/callback`), Auth: false},
 	{Mehtod: "GET", URL: regexp.MustCompile(`/v1/oauth/google/login$`), Auth: false},
@@ -44,11 +45,12 @@ var AuthRequests = []AuthRequest{
 }
 
 var AuthMethods = map[string]bool{
-	"/proto.ArticleService/CreateArticle": true,
-	"/proto.ArticleService/GetArticle":    false,
-	"/proto.ArticleService/ListArticles":  false,
-	"/proto.ArticleService/UpdateArticle": true,
-	"/proto.ArticleService/DeleteArticle": true,
+	"/proto.ArticleService/CreateArticle":   true,
+	"/proto.ArticleService/GetArticle":      false,
+	"/proto.ArticleService/ListArticles":    false,
+	"/proto.ArticleService/UpdateArticle":   true,
+	"/proto.ArticleService/DeleteArticle":   true,
+	"/proto.ArticleService/GetArticleCount": false,
 
 	"/proto.AuthService/PreSignup":           false,
 	"/proto.AuthService/Signup":              false,
